--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "redis": "^4.6.5",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
